--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "async": "^3.2.0",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
+    "cookie": "^0.4.1",
     "fs": "0.0.1-security",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
     "mongoose": "^5.12.8",
     "next": "10.2.0",
