--- a/package.json
+++ b/package.json
@@ -2,9 +2,6 @@
   "name": "economist-clone",
   "version": "0.1.0",
   "private": true,
-  "browser": {
-    "child_process": false
-  },
   "scripts": {
     "dev": "next dev -p 1233",
     "build": "next build",
@@ -28,5 +25,9 @@
   "devDependencies": {
     "@types/react": "^17.0.5",
     "typescript": "^4.2.4"
+  },
+  "engines": {
+    "node": ">=14.12.2",
+    "npm": ">=6.14.8"
   }
 }
