--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "typescript": "^4.2.4"
   },
   "engines": {
-    "node": ">=14.12.2",
-    "npm": ">=6.14.8"
+    "node": "14.12.2",
+    "npm": "6.14.8"
   }
 }
