--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "async": "^3.2.0",
     "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
+    "bcryptjs": "^2.4.3",
     "cookie": "^0.4.1",
     "fs": "0.0.1-security",
     "jsonwebtoken": "^8.5.1",
