--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "dev": "next dev -p 1233",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest"
   },
   "dependencies": {
     "async": "^3.2.0",
@@ -25,11 +26,16 @@
     "sass": "^1.32.12"
   },
   "devDependencies": {
+    "@babel/core": "^7.14.3",
+    "@babel/preset-env": "^7.14.2",
+    "@testing-library/react": "^11.2.7",
     "@types/react": "^17.0.5",
+    "babel-jest": "^27.0.1",
+    "jest": "^27.0.1",
     "typescript": "^4.2.4"
   },
   "engines": {
-    "node": "14.12.2",
-    "npm": "6.14.8"
+    "node": "15.14.0",
+    "npm": "7.7.6"
   }
 }
