--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev -p 1233",
     "build": "next build",
     "start": "next start",
-    "test": "jest"
+    "test": "jest --testEnvironment=node --runInBand"
   },
   "dependencies": {
     "async": "^3.2.0",
@@ -32,6 +32,7 @@
     "@types/react": "^17.0.5",
     "babel-jest": "^27.0.1",
     "jest": "^27.0.1",
+    "mongodb-memory-server": "^6.9.6",
     "typescript": "^4.2.4"
   },
   "engines": {
