--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -17,6 +17,7 @@ jobs:
     strategy:
       matrix:
         node-version: [14.x]
+        mongodb-version: ['4.4']
         # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
 
     steps:
